# prx

./: .pre-commit-config.yaml  .travis.yml  README.rst  pyproject.toml
prx/console/: application.py  command.py  utils.py
pyrex/console/: application.py  command.py  match_command.py  sub_command.py  utils.py
tests/: prx_test.py  test_pyrex.py
tests/console/: match_command_test.py  test_console.py  utils_test.py
