[tool.poetry]
name = "pyrex"
version = "0.1.0"
description = ""
authors = ["Panos Mavrogiorgos <pmav99@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
cleo = "^0.7.2"
munch = "^2.3"
schema = "^0.6.8"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.scripts]
pyrex = 'pyrex.console:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
