[tool.poetry]
name = "prx"
version = "0.1.0"
description = ""
authors = ["Panos Mavrogiorgos <pmav99@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
cleo = "^0.7.2"
munch = "^2.3"
schema = "^0.6.8"

[tool.poetry.dev-dependencies]
pytest = "^4.0"
black = {version= "^18.9b0", allows-prereleases = true}
isort = "^4.3"

[tool.poetry.scripts]
prx = 'prx.console:main'

[tool.black]
line-length = 88
py36 = true
include = '\.pyi?$'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
